--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "node-fetch": "^2.1.1"
+    "node-fetch": "^2.1.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "browser-sync": "^2.23.6",
