--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "node-fetch": "^2.1.1",
+    "object-sizeof": "^1.2.0",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
